Fixed broken collapse from changed nav height

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -12,7 +12,7 @@ button {
     }
 }
 
-#map {
+div#map {
     height: 40vh;
 }
 
@@ -21,7 +21,7 @@ img {
 }
 
 .jumbotron {
-    .overlay {
+    div.overlay {
         position: relative;
         top: 0;
         left: 0;
@@ -44,7 +44,7 @@ nav {
     }
 }
 
-.thumbnail {
+div.thumbnail {
     background-color: white;
 }
 
